# mango

./: .gitignore  CONTRIBUTING.md  LICENSE  MANGO_PRODUCT_BIBLE.md  README.md  mkdocs.yml  pyproject.toml  requirements.txt
docs/: contributing.md  index.md  memory.md  providers.md  quickstart.md  server.md  tools.md
examples/: complete_example.py  train_example.py  trainingset_example.jsonl  trainingset_marketplace.jsonl
frontend/: README.md  nuxt.config.ts  package-lock.json  package.json
frontend/app/pages/: index.vue
mango/: __init__.py
mango/agent/: agent.py  prompt_builder.py  value_grounding.py
mango/core/: registry.py  security.py  types.py
mango/integrations/: __init__.py  anthropic.py  chromadb.py  google.py  mongodb.py  ollama.py  openai.py
mango/llm/: __init__.py  base.py  factory.py  models.py
mango/memory/: __init__.py  base.py  models.py
mango/nosql_runner/: __init__.py  base.py
mango/servers/cli/: main.py
mango/servers/fastapi/: __init__.py  main.py  models.py  routes.py  sessions.py
mango/tools/: __init__.py  base.py  memory_tools.py  mongo_tools.py  validator.py
mango_benchmark/: DATASET_DESIGN.md  DESIGN.md  EVAL_PROTOCOL.md  README.md  __init__.py  config.py  dataset.py  eai_benchmark.py  equivalence.py  fact_scorer.py  mango_ecommerce_benchmark.csv  mango_ecommerce_benchmark_lite.csv  mango_marketplace_benchmark.csv  report.py  runner.py  scorecard.py  split.py
mango_benchmark/bench_datasets/: FREEZE.md  REVIEW.md  __init__.py  build.py  common.py  contamination.py  probes.py  review_packet.md  review_packet_2.md  validate.py
mango_benchmark/bench_datasets/logistics/: __init__.py  generate.py  questions.py  schema.py
mango_benchmark/bench_datasets/meters/: __init__.py  generate.py  questions.py  schema.py
mango_benchmark/bench_datasets/workforce/: __init__.py  generate.py  questions.py  schema.py
mango_benchmark/seed/: generate.py  ground_truth.py  questions.py  schema.py
mango_benchmark/seed_hard/: build_trainingset.py  generate.py  ground_truth.py  questions.py  schema.py
notebooks/: mango_quickstart.ipynb
src/: video_readme.webm
tests/: conftest.py  test_agent.py  test_coerce_dates.py  test_context_enhancer.py  test_equivalence.py  test_explain_tool.py  test_memory.py  test_memory_sanity.py  test_mongo_backend.py  test_mongo_tools.py  test_prompt_builder.py  test_query_limits.py  test_result_cap.py  test_result_rows.py  test_schema_aware_coercion.py  test_security_writes.py  test_server_sessions.py  test_text_memory_retrieval.py  test_tool_registry.py  test_types.py  test_validator.py  test_value_grounding.py
tests/integration/: conftest.py  test_workflow.py
